--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   padding: 3rem;
 }
 
+@media screen and (max-width: 768px) {
+  .App {
+    padding: 10px;
+  }
+}
+
 .title {
   display: flex;
   flex-direction: row;
