--- a/src/presentation/components/inputTextIcon.module.css
+++ b/src/presentation/components/inputTextIcon.module.css
@@ -1,24 +1,29 @@
 .inputTextIcon {
-    width: 20%;
-    height: 40px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-bottom: 1rem;
-    padding-left: 1rem;
-    font-size: 16px;
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-    align-items: center;
+  width: 20%;
+  height: 40px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding-left: 1rem;
+  font-size: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
 }
 
-.inputText{
-    width: 100%;
-    height: 30px;
-    font-size: 16px;
-    border: none;
+@media screen and (max-width: 768px) {
+  .inputTextIcon {
+    width: 50%;
+  }
+}
+
+.inputText {
+  width: 100%;
+  height: 30px;
+  font-size: 16px;
+  border: none;
 }
 
 .inputText:focus {
-    outline: none;
+  outline: none;
 }
